ingress-tls-certificate-using-secrect/ingress-path-base-routing/nginx-ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
   - http:
      paths:
      - path: /hello(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: hello-app
            port:
              number: 8080
